--- a/BlackJack_Final_Project.ipynb
+++ b/BlackJack_Final_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "    total = first_card + second_card\n",
     "    \n",
     "    print(\"Cards: \" + str(first_card) + \",\" + str(second_card))\n",
-    "    print(\"Total: \" + str(total))\n",
+    "    print(\"Your Total: \" + str(total))\n",
     "    if total is 21:\n",
     "        blackjack = True\n",
     "        \n",
@@ -28,10 +28,10 @@
     "        option = input('Type \"Stay\" to stay or \"Hit\" to hit')\n",
     "        if option == 'Stay' or option == 'stay':\n",
     "            break\n",
-    "        card1 = new_card()\n",
+    "        first_card = new_card()\n",
     "        print(\"\\nDraw: \" + str(first_card))\n",
-    "        total += card1\n",
-    "        print(\"Total: \" + str(total))\n",
+    "        total += first_card\n",
+    "        print(\"Your Total: \" + str(total))\n",
     "    return total, blackjack\n",
     "\n",
     "def dealer():\n",
@@ -42,20 +42,20 @@
     "    total = first_card + second_card\n",
     "    \n",
     "    print(\"Cards: \" + str(first_card) + \",\" + str(second_card))\n",
-    "    print(\"Total: \" + str(total))\n",
+    "    print(\"Dealer's Total: \" + str(total))\n",
     "    \n",
     "    while total <=16:\n",
     "        print(\"The Dealer is under 16, he has to take another hit!\")\n",
     "        first_card = new_card()\n",
     "        print(\"\\nDraw: \" + str(first_card))\n",
     "        total += first_card\n",
-    "        print(\"Total: \" + str(total))\n",
+    "        print(\"Dealer's Total: \" + str(total))\n",
     "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -63,8 +63,46 @@
      "output_type": "stream",
      "text": [
       "Your Turn\n",
-      "Cards: 9,6\n",
-      "Total: 15\n"
+      "Cards: 4,2\n",
+      "Your Total: 6\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Type \"Stay\" to stay or \"Hit\" to hit hit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Draw: 10\n",
+      "Your Total: 16\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Type \"Stay\" to stay or \"Hit\" to hit stay\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dealer's Turn\n",
+      "Cards: 1,9\n",
+      "Dealer's Total: 10\n",
+      "The Dealer is under 16, he has to take another hit!\n",
+      "\n",
+      "Draw: 11\n",
+      "Dealer's Total: 21\n",
+      "You Lose!\n"
      ]
     }
    ],
@@ -79,10 +117,10 @@
     "        print(\"You got Black Jack! Congradutlations!\")\n",
     "        player_wins = True\n",
     "    if player_total > 21:\n",
-    "        print(\"Bust! Sorry you lose!\")\n",
+    "        print(\"Bust!\")\n",
     "        dealer_wins = True\n",
     "        \n",
-    "    if player_wins is False or dealer_wins is False:\n",
+    "    elif player_wins is False or dealer_wins is False:\n",
     "        dealer_total = dealer()\n",
     "        if dealer_total > 21:\n",
     "            print(\"Bust!\")\n",
@@ -94,7 +132,7 @@
     "        else:\n",
     "            dealer_wins = True\n",
     "            \n",
-    "    print(\"Game Over\")\n",
+    "  \n",
     "    if player_wins:\n",
     "        print(\"You Win!\")\n",
     "    elif dealer_wins:\n",
@@ -103,6 +141,13 @@
     "        print(\"Push, its a draw!\")\n",
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
